--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,10 @@
         android:orientation="horizontal">
 
         <CheckBox
+            android:id="@+id/check_whipped_cream"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:onClick="whipMyCream"/>
 
         <TextView
             android:layout_width="wrap_content"
