--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,14 +2,22 @@
 
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:inputType="text"
+            android:text="@string/name" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -18,7 +26,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
-            android:text="TOPPINGS"/>
+            android:text="@string/toppings"
+            android:textAllCaps="true"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,14 +40,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="24dp"
-                android:text="Whipped cream" />
+                android:text="@string/cream" />
 
             <CheckBox
                 android:id="@+id/check_hot_chocolate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="24dp"
-                android:text="Hot chocolate" />
+                android:text="@string/chocolate" />
 
         </LinearLayout>
 
@@ -49,7 +58,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
-            android:text="QUANTITY" />
+            android:text="@string/quantity"
+            android:textAllCaps="true" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -63,7 +73,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
                 android:onClick="decrement"
-                android:text="-"
+                android:text="@string/plus"
                 />
 
             <TextView
@@ -74,7 +84,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="8dp"
-                android:text="0"
+                android:text="@string/init"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"/>
 
@@ -84,7 +94,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
                 android:onClick="increment"
-                android:text="+"
+                android:text="@string/minus"
                 />
 
         </LinearLayout>
@@ -96,7 +106,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
-            android:text="Order summary"
+            android:text="@string/summary"
             android:textAllCaps="true"/>
 
         <TextView
@@ -107,7 +117,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
-            android:text="0"
+            android:text="@string/init"
             android:textColor="@android:color/black"
             android:textSize="16sp"/>
 
@@ -119,7 +129,8 @@
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
             android:onClick="submitOrder"
-            android:text="ORDER"/>
+            android:text="@string/order"
+            android:textAllCaps="true"/>
 
     </LinearLayout>
 </ScrollView>
