--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,9 +19,11 @@
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:hint="@string/name"
             android:inputType="text"
-            android:text="@string/name"
             tools:ignore="RtlHardcoded" />
 
         <!--Choose toppings-->
