--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!--User name input-->
+        <!-- User name input -->
         <EditText
             android:id="@+id/name"
             android:layout_width="match_parent"
@@ -28,14 +28,12 @@
 
         <!--Choose toppings-->
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/HeaderTextStyle"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
-            android:text="@string/toppings"
-            android:textAllCaps="true"/>
+            android:text="@string/toppings"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,14 +62,12 @@
 
         <!--Display, choose quantity-->
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/HeaderTextStyle"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
-            android:text="@string/quantity"
-            android:textAllCaps="true" />
+            android:text="@string/quantity" />
 
         <LinearLayout
             android:layout_width="wrap_content"
